# automating_kafka_reboots

./: .env  Dockerfile  localSetup.sh  policy.json  readme.md  role-policy.json  setup.cfg  setup.py  trust-relationship.json
deployment/: Chart.yaml  values.yaml
deployment/profiles/develop/: values.yaml
deployment/templates/: configmap-env.yaml  deployment.yaml  ingress-internal.yaml  role-binding.yaml  role.yaml  service-account.yaml  service.yaml
