[metadata]
name = app
version = 1.1
description = Python package for automating kafka node restarts in a cluster
long_description = file: README.md
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://
    Release notes =https://
    Source = https://
    Tracker = https://

[options]
packages=find:
python_requires = >= 3.10
include_package_data = true
zip_safe = false
setup_requires =
setuptools~ = 63.4.2
install_requires =
    boto3==1.26.3
    pytest==7.2.0
    kafka-python==2.0.2
    slackclient==2.9.4

[options.extras_require]
dev =

[global]
quiet = 1

[sdist]
formats = zip,tar